base/worker-deployment.yaml
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: worker

apiVersion: apps/v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      restartPolicy: Always
      containers:
        - name: worker
          image: k2m30/ruby_worker:1.0
