base/server-deployment.yaml
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server

apiVersion: apps/v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: k2m30/js_server:1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server
#  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
#      nodePort: 30000
