base/ingress.yaml
kind: Ingress
metadata:
  name: main

apiVersion: networking.k8s.io/v1
spec:
  rules:
    - host: "kube.spiski.live"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: server-service
                port:
                  number: 8080
